# draytek-arsenal

./: LICENSE  README.md  draytek_fw.ksy
.github/workflows/: docker-image.yml
draytek_arsenal/: pyproject.toml  requirements.txt
draytek_arsenal/src/draytek_arsenal/: __main__.py  compression.py  dlm.py  draytek_format.py  format.py  fs.py  linux.py  soho.py
draytek_arsenal/src/draytek_arsenal/commands/: base.py  dlm_hash.py  elf_to_dlm.py  extract.py  extract_linux.py  extract_soho.py  find_endianness.py  find_loading_addr.py  mips_compile.py  mips_merge.py  parse.py  patch.py  send_to_cgi.py  trigger_appe_update.py
mips-tools/: Dockerfile  entry.sh  mips-tools.sh
